# data-server

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main-ci.yml  publish.yml
data_server/: __init__.py  __main__.py  argument_parser.py  data_server_types.py  errors.py  typing.py
data_server/core/: data_controller.py  data_router.py  server.py
data_server/core/adapters/: adapter.py  csv_adapter.py  json_adapter.py
json_server/: data_controller.py
tests/: fake_data.py  test_argument_parser.py
tests/core/: test_data_controller.py  test_data_router.py  test_server.py
tests/core/adapters/: test_adapter.py  test_csv_adapter.py  test_json_adapter.py
tests/int/: __init__.py  test_delete_request.py  test_get_request.py  test_patch_request.py  test_post_request.py  test_put_request.py  utils.py
tests/unit/: fake_data.py  test_argument_parser.py  test_main.py
tests/unit/core/: test_data_controller.py  test_data_router.py  test_server.py
tests/unit/core/adapters/: test_adapter.py  test_csv_adapter.py  test_json_adapter.py
